--- a/fanpage.html
+++ b/fanpage.html
@@ -12,30 +12,26 @@
         background-image: url('m.jpg');
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-size:  100%;
+        background-size:  cover;
     }
+   
     #v 
     {
-      border-style: ridge;
-      border: 0px outset black;
-      border-radius: 8px;
-      background-color: white;
-      padding-top: 5px;
-      padding-bottom: 20px;
-      padding-left: 25px;   
-      padding-right: 25px;
-      width:400px;
-      margin-left: 525px;
-      margin-top: 10px;   
-      margin-bottom: 50px;
-      margin-right: 500px;
+        border-style: ridge;
+        border: 0px outset black;
+        border-radius: 8px;
+        background-color: white;
+        padding: 20px;
+        width: 90%;
+        max-width: 400px;
+        margin: 10px auto;
     }
-    #i
+    #i 
     {
-        border-radius: 5px;
-        margin-left: 590px;
-        margin-top: 50px;
-        margin-right: 0px; 
+        display: block;
+        margin: 20px auto;
+        max-width: 80%;
+        height: auto;
     }
 
     h1{
@@ -89,13 +85,29 @@
     {
         background-color: #ff4d4d;
         color: white;
-        border: 4px solid #ff4d4d;
-        border-radius: 100px;
-        padding:10px;
+        border: none;
+        border-radius: 50px;
+        padding: 10px;
         margin:20px 0px;
         cursor: pointer;
         font-size:20px;
         width:100%
+    }
+
+    @media (min-width: 600px) 
+    {
+        #v 
+        {
+            width: 80%;
+        }
+    }
+
+    @media (min-width: 900px)
+    {
+        #v 
+        {
+            width: 60%;
+        }
     }
 </style>
 
